src/CSS/style.css
@import url("mediaqueries.css");

* {
    margin: 0;
    padding: 0;
}

body{
    font-family: "Poppins",Arial, sans-serif;
    background: #fff;
    font-size: 16px;
    line-height: 1.8;
    font-weight: 300;
    color: #81919a;
    width: 100%;
}


.container {
    width: 100%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
}

.navbar{
    position: absolute;
    top: 20px;
    width: 100%;
    background: transparent;
    color: #fff;
    z-index: 3;
    display: flex;
    justify-content: center;
}

.nav-list{
    width: 100%;
    display: flex;
    justify-content: flex-end;
    /* display: block; */
}

.nav-header {
    height: 50px;
    font-size: 20px;
    font-weight: 600;
    text-decoration: none;
    display: flex;
    align-items: center;
    color: #fff;
}

.nav-list-items{
    display: flex;
    justify-content: space-around;
    list-style-type: none;
    align-items: center;
    padding-right: 100px;
}

.nav-link{
    font-size: 14px;
    font-weight: 400;
    text-decoration: none;
    color: #fff;
    padding: 10px 25px 10px 25px;
}

.nav-btn{
    width: 80px;
    border: 0.5px solid #fff;
    padding: 10px 25px 10px 25px;
    border-radius: 18px;
}

.nav-container {
    width: 80% !important;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.pic2{
    object-fit: fill;
}

.hero-wrap{
    position: relative;
    height: 90vh;
    z-index: 1;
    background: rgb(34,187,212);
    background: linear-gradient(to bottom, rgba(34,187,212,1) 0%, rgba(32,201,151,1) 67%);
}

.main-container{
    display: flex;
    justify-content: space-around;
    position: relative;
}

.sidebar-text{
    padding-top: 150px;
    padding-left: 173px;
    color: #fff;
    flex: 1;
}

.btn {
    padding: 20px 25px;
    border: 0.5px solid #fff;
    border-radius: 35px;
    text-decoration: none;
    color: #20c997;
    background-color: #fff;
    opacity: 0.8;
}

.pic2 {
    display: flex;
    justify-content: center;
    align-items: end;
    position: absolute;
    bottom: -31%;
}

.nav-container .fa{
    display: none;
}

.pic2 img {
    width: 75%;
}



.sidebar-picture{
    flex: 3;
}

.sidebar-text h1{
    font-size: 44px;
    color: #fff;
    line-height: 1.2;
    font-weight: 800;
    margin-bottom: 1.5rem !important;
}

.sidebar-text p{
    font-size: 20px;
    line-height: 1.5;
    font-weight: 300;
    color: rgba(255, 255, 255, 0.7);
    margin-bottom: 3rem !important;
}

